# sigmod-2017

./: .gitignore  CMakeLists.txt  README  bench.sh  compile.sh  package.sh  run.sh
src/: dictionary.h  hash.h  input.cpp  input.h  job.h  lock.cpp  lock.h  main.cpp  nfa.cpp  nfa.h  query.h  settings.h  simplemap.cpp  simplemap.h  thread.h  timer.cpp  timer.h  util.cpp  util.h  word.cpp  word.h
